--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -83,10 +83,13 @@ li{
 }
 
 .image{
-    width: 100%;
+    max-width: 100%;
+    margin-top: 50px;
+    position: relative;
+    flex-wrap: wrap;
     display: flex;
     justify-content: space-evenly;
-    height: auto;
+    align-items: center;
 }
 
 #picture1{
